--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 
 </head>
 <body>
-<div class="container-fluid">
-	
+<div class="container-fluid rounded">
+	<div class="mt-4 p-5 bg-primary text-white rounded">
+	  <h1>Jumbotron Example</h1>
+	  <p>Lorem ipsum...</p>
+	</div>
 </div>
 </body>
 </html>
