--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
 <div class="container-fluid rounded">
 	<div class="mt-4 p-5 bg-primary text-white rounded">
-	  <h1>Jumbotron Example</h1>
-	  <p>Lorem ipsum...</p>
+	  <h1>CALEB KELLY</h1>
 	</div>
 </div>
 </body>
