--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
 		<div class="container-fluid justify-content-center">
 			<ul class=navbar-nav>
 				<li class="nav-item">
-					<a class="nav-link active" href="#">Home</a>
+					<a class="nav-link active" href="https://Caleb-M-Kelly.github.io/index.html">Home</a>
 				</li>
 			</ul>
 			<ul class=navbar-nav>
 				<li class="nav-item">
-					<a class="nav-link" href="./About.html">About</a>
+					<a class="nav-link" href="https://Caleb-M-Kelly.github.io/About.html">About</a>
 				</li>
 			</ul>
 			<ul class=navbar-nav>
 				<li class="nav-item">
-					<a class="nav-link" href="./Self-Study.html"> Self-Study </a>
+					<a class="nav-link" href="https://Caleb-M-Kelly.github.io/self-study/Self-Study.html"> Self-Study </a>
 				</li>
 			</ul>
 			<ul class=navbar-nav>
 				<li class="nav-item">
-					<a class="nav-link" href="./Projects.html">Projects</a>
+					<a class="nav-link" href="https://Caleb-M-Kelly.github.io/projects/Projects.html">Projects</a>
 				</li>
 			</ul>
 		</div>
