Fixed linking again.

--- a/projects/Projects.html
+++ b/projects/Projects.html
@@ -17,7 +17,7 @@
 			<div class="container-fluid justify-content-center">
 				<ul class=navbar-nav>
 					<li class="nav-item">
-						<a class="nav-link active" href="https://Caleb-M-Kelly.github.io/index.html">Home</a>
+						<a class="nav-link" href="https://Caleb-M-Kelly.github.io/index.html">Home</a>
 					</li>
 				</ul>
 				<ul class=navbar-nav>
@@ -32,11 +32,11 @@
 				</ul>
 				<ul class=navbar-nav>
 					<li class="nav-item">
-						<a class="nav-link" href="https://Caleb-M-Kelly.github.io/projects/Projects.html">Projects</a>
+						<a class="nav-link active" href="https://Caleb-M-Kelly.github.io/projects/Projects.html">Projects</a>
 					</li>
 				</ul>
 			</div>
-	</nav>
+		</nav>
 	<div class="container-fluid">
 		
 	</div>
