--- a/About.html
+++ b/About.html
@@ -17,12 +17,12 @@
 			<div class="container-fluid justify-content-center">
 				<ul class=navbar-nav>
 					<li class="nav-item">
-						<a class="nav-link active" href="https://Caleb-M-Kelly.github.io/index.html">Home</a>
+						<a class="nav-link" href="https://Caleb-M-Kelly.github.io/index.html">Home</a>
 					</li>
 				</ul>
 				<ul class=navbar-nav>
 					<li class="nav-item">
-						<a class="nav-link" href="https://Caleb-M-Kelly.github.io/About.html">About</a>
+						<a class="nav-link active" href="https://Caleb-M-Kelly.github.io/About.html">About</a>
 					</li>
 				</ul>
 				<ul class=navbar-nav>
