--- a/self-study/Self-Study.html
+++ b/self-study/Self-Study.html
@@ -17,7 +17,7 @@
 			<div class="container-fluid justify-content-center">
 				<ul class=navbar-nav>
 					<li class="nav-item">
-						<a class="nav-link active" href="https://Caleb-M-Kelly.github.io/index.html">Home</a>
+						<a class="nav-link" href="https://Caleb-M-Kelly.github.io/index.html">Home</a>
 					</li>
 				</ul>
 				<ul class=navbar-nav>
@@ -27,7 +27,7 @@
 				</ul>
 				<ul class=navbar-nav>
 					<li class="nav-item">
-						<a class="nav-link" href="https://Caleb-M-Kelly.github.io/self-study/Self-Study.html"> Self-Study </a>
+						<a class="nav-link active" href="https://Caleb-M-Kelly.github.io/self-study/Self-Study.html"> Self-Study </a>
 					</li>
 				</ul>
 				<ul class=navbar-nav>
