--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 <div class="container-fluid rounded">
-	<div class="mt-4 p-5 bg-primary text-white rounded text-center">
-		<h1 class="topHead">CALEB KELLY</h1>
+	<div class="mt-4 p-3 primary text-center">
+		<h1 class="topHead">Caleb Kelly</h1>
 	</div>
 	<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center">
 		<div class="container-fluid justify-content-center">
