--- a/projects/Projects.html
+++ b/projects/Projects.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="container-fluid rounded">
-	<div class="mt-4 p-5 bg-primary text-white rounded text-center">
+	<div class="mt-4 p-3 primary text-center">
 		<h1 class="topHead">CALEB KELLY</h1>
 	</div>
 	<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center">
