--- a/self-study/Self-Study.html
+++ b/self-study/Self-Study.html
@@ -11,7 +11,7 @@
 <body>
 <div class="container-fluid rounded">
 	<div class="mt-4 p-3 primary text-center">
-		<h1 class="topHead">CALEB KELLY</h1>
+		<h1 class="topHead">Caleb Kelly</h1>
 	</div>
 	<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center">
 			<div class="container-fluid justify-content-center">
