--- a/projects/Projects.html
+++ b/projects/Projects.html
@@ -8,7 +8,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 	<link href="https://caleb-m-kelly.github.io/style.css" rel="stylesheet">
 </head>
-<body>
+<body class="container-fluid p-0">
 <div class="container-fluid rounded">
 	<div class="mt-4 p-3 primary text-center">
 		<h1 class="topHead">Caleb Kelly</h1>
@@ -20,17 +20,12 @@
 						<a class="nav-link" href="https://Caleb-M-Kelly.github.io/index.html">Home</a>
 					</li>
 				</ul>
-				<ul class=navbar-nav>
 					<li class="nav-item">
 						<a class="nav-link" href="https://Caleb-M-Kelly.github.io/About.html">About</a>
 					</li>
-				</ul>
-				<ul class=navbar-nav>
 					<li class="nav-item">
 						<a class="nav-link" href="https://Caleb-M-Kelly.github.io/self-study/Self-Study.html"> Self-Study </a>
 					</li>
-				</ul>
-				<ul class=navbar-nav>
 					<li class="nav-item">
 						<a class="nav-link active" href="https://Caleb-M-Kelly.github.io/projects/Projects.html">Projects</a>
 					</li>
