--- a/self-study/Self-Study.html
+++ b/self-study/Self-Study.html
@@ -8,7 +8,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 	<link href="https://caleb-m-kelly.github.io/style.css" rel="stylesheet">
 </head>
-<body>
+<body class="container-fluid p-0">
 <div class="container-fluid rounded">
 	<div class="mt-4 p-3 primary text-center">
 		<h1 class="topHead">Caleb Kelly</h1>
