--- a/projects/Projects.html
+++ b/projects/Projects.html
@@ -20,12 +20,17 @@
 						<a class="nav-link" href="https://Caleb-M-Kelly.github.io/index.html">Home</a>
 					</li>
 				</ul>
+				<ul class=navbar-nav>
 					<li class="nav-item">
 						<a class="nav-link" href="https://Caleb-M-Kelly.github.io/About.html">About</a>
 					</li>
+				</ul>
+				<ul class=navbar-nav>
 					<li class="nav-item">
 						<a class="nav-link" href="https://Caleb-M-Kelly.github.io/self-study/Self-Study.html"> Self-Study </a>
 					</li>
+				</ul>
+				<ul class=navbar-nav>
 					<li class="nav-item">
 						<a class="nav-link active" href="https://Caleb-M-Kelly.github.io/projects/Projects.html">Projects</a>
 					</li>
