--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
 		</div>
 	</nav>
 	<div class="container-fluid">
-		<p>Hello! My name is Caleb Kelly.</p>
+		<div class="col-3">
+		</div>
+		<div class="col-9">
+			Hello
+		</div>
+		<div class="col-3">
+		</div>
 	</div>
 </div>
 </body>
