--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@
 		</div>
 	</nav>
 	<div class="container-fluid">
-		<div class="col-3">
-		</div>
-		<div class="col-9">
-			Hello
-		</div>
-		<div class="col-3">
+		<div class="row">
+			<div class="col-3">
+			</div>
+			<div class="col-9">
+				Hello
+			</div>
+			<div class="col-3">
+			</div>
 		</div>
 	</div>
 </div>
