Added an about bio

--- a/About.html
+++ b/About.html
@@ -38,7 +38,33 @@
 			</div>
 	</nav>
 	<div class="container-fluid">
-		
+		<div class="container-fluid">
+				<div class="row">
+					<div class="col-1">
+					</div>
+					<div class="col-10 text-center main">
+						<p>
+						&nbsp;&nbsp;I'm an undergrad at the Raikes School at the University of Nebraska - Lincoln. I grew up in Thurston, NE
+						and attended high school in Pender, NE. As a kid in a rural community, I had the opportunity to challenge myself by
+						self-studying the upper levels of my favorite fields. I was ever curious, causing me to push to acquire knowledge,
+						 skills, and experiences far outside the box.
+						</p>
+						<p>
+							&nbsp;&nbsp;Throughout my experiences, I've managed to pick up some technical skills, including programming languages.
+							Currently, my languages include Java, Python, C#, HTML, CSS, and JavaScript, among others. I've even built some cool
+							projects, some of which you will find on this site.
+						</p>
+						<p>
+							&nbsp;&nbsp;I'm involved in a variety of activities here on campus, including the Honors Student Advisory Board,
+							the Kauffman Residents Association, and ASUN Student Government. I'm also looking forward to doing research with Dr. Huijing Du
+							in mathematical biology and Dr. Alex Zupan in knot theory. Through all these projects, I hope to apply my knowledge
+							and technical skills to positively impact the world around me.
+						</p>
+					</div>
+					<div class="col-1">
+					</div>
+				</div>
+			</div>
 	</div>
 </div>
 </body>
