--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container-fluid justify-content-center">
 			<ul class=navbar-nav>
 				<li class="nav-item">
-					<a class="nav-link active" href="https://Caleb-M-Kelly.github.io/index.html">Home</a>
+					<a class="nav-link active" aria-current="page" href="https://Caleb-M-Kelly.github.io/index.html">Home</a>
 				</li>
 			</ul>
 			<ul class=navbar-nav>
@@ -39,12 +39,13 @@
 	</nav>
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-3">
+			<div class="col-1">
 			</div>
-			<div class="col-9">
-				Hello
+			<div class="col-10 text-center main">
+				&nbsp;&nbsp;Hello! My name is Caleb Kelly! I'm passionate about learning all there is to know, with special interests in Mathematics, Physics, and Computer Science. 
+				I'm currently studying these majors, along with Data Science, at the University of Nebraska-Lincoln's select honors program, the Jeffrey S. Raikes School of Computer Science and Management.
 			</div>
-			<div class="col-3">
+			<div class="col-1">
 			</div>
 		</div>
 	</div>
