--- a/self-study/Self-Study.html
+++ b/self-study/Self-Study.html
@@ -38,7 +38,18 @@
 			</div>
 	</nav>
 	<div class="container-fluid">
-		
+		<div class="container-fluid">
+				<div class="row">
+					<div class="col-1">
+					</div>
+					<div class="col-10 text-center main">
+						&nbsp;&nbsp;Hello! My name is Caleb Kelly! I'm passionate about learning all there is to know, with special interests in Mathematics, Physics, and Computer Science. 
+						I'm currently studying these majors, along with Data Science, at the University of Nebraska-Lincoln's select honors program, the Jeffrey S. Raikes School of Computer Science and Management.
+					</div>
+					<div class="col-1">
+					</div>
+				</div>
+			</div>
 	</div>
 </div>
 </body>
