Self-Study update

--- a/About.html
+++ b/About.html
@@ -60,6 +60,11 @@
 							in mathematical biology and Dr. Alex Zupan in knot theory. Through all these projects, I hope to apply my knowledge
 							and technical skills to positively impact the world around me.
 						</p>
+						<p>
+							&nbsp;&nbsp;As the first ever Presidential Scholar of UNL, I have finally attained the freedom to pursue my interests 
+							at my own discretion. The difficulty with having many interests is having many choices. Although I haven't yet determined 
+							what my career path will look like, I know I want to make a positive impact on the world around me.
+						</p>
 					</div>
 					<div class="col-1">
 					</div>
