--- a/self-study/Self-Study.html
+++ b/self-study/Self-Study.html
@@ -43,8 +43,11 @@
 					<div class="col-1">
 					</div>
 					<div class="col-10 text-center main">
-						&nbsp;&nbsp;Hello! My name is Caleb Kelly! I'm passionate about learning all there is to know, with special interests in Mathematics, Physics, and Computer Science. 
-						I'm currently studying these majors, along with Data Science, at the University of Nebraska-Lincoln's select honors program, the Jeffrey S. Raikes School of Computer Science and Management.
+						&nbsp;&nbsp;Throughout my time in junior high, high school, and undergraduate experiences I have done a great deal of self-studying 
+						to extend my knowledge and technical skills. I've only just begun to record these experiences here for you to see! Feel free to check
+						out my personal thoughts & notes. By far the most extensive resource I've used is MIT OpenCourseWare, a platform where MIT's professors
+						can post lecture notes, lecture videos, and other materials to support freedom of education. Without MIT OpenCourseWare, I feel my personal 
+						growth would have been stunted; so let this be a personal thank you and recommendation for the platform.
 					</div>
 					<div class="col-1">
 					</div>
