--- a/About.html
+++ b/About.html
@@ -40,9 +40,9 @@
 	<div class="container-fluid">
 		<div class="container-fluid">
 				<div class="row">
-					<div class="col-1">
+					<div class="col-2">
 					</div>
-					<div class="col-10 text-center main">
+					<div class="col-8 main">
 						<p>
 						&nbsp;&nbsp;I'm an undergrad at the Raikes School at the University of Nebraska - Lincoln. I grew up in Thurston, NE
 						and attended high school in Pender, NE. As a kid in a rural community, I had the opportunity to challenge myself by
@@ -66,7 +66,7 @@
 							what my career path will look like, I know I want to make a positive impact on the world around me.
 						</p>
 					</div>
-					<div class="col-1">
+					<div class="col-2">
 					</div>
 				</div>
 			</div>
