--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 		</div>
 	</nav>
 	<div class="container-fluid">
+		<h1 class="primary text-center mt-3 mb-3">About Me</h1>			
 		<div class="row">
 			<div class="col-2">
 			</div>
