Added QM I first iteration

--- a/self-study/Self-Study.html
+++ b/self-study/Self-Study.html
@@ -52,6 +52,9 @@
 					<div class="col-2">
 					</div>
 				</div>
+				<div class="row">
+					<button class="btn" href="./QM 1.txt">Quantum Physics I (MIT 8.04) - MIT OCW</button>
+				</div>
 			</div>
 	</div>
 </div>
