--- a/self-study/Self-Study.html
+++ b/self-study/Self-Study.html
@@ -53,7 +53,13 @@
 					</div>
 				</div>
 				<div class="row">
-					<button class="btn" href="./QM 1.txt">Quantum Physics I (MIT 8.04) - MIT OCW</button>
+					<div class="col-2">
+					</div>
+					<div class="col-8 main">
+					<button class="btn"><a href="./QM 1.txt">Quantum Physics I (MIT 8.04) - MIT OCW</a></button>
+					</div>
+					<div class="col-2">
+					</div>
 				</div>
 			</div>
 	</div>
