Update self study

--- a/self-study/Self-Study.html
+++ b/self-study/Self-Study.html
@@ -53,7 +53,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<button class="btn" href="./QM 1.txt">Quantum Physics I (MIT 8.04) - MIT OCW</button>
+					<a href="./QM I/QM I.html"><button class="btn primary">Quantum Physics I (MIT 8.04) - MIT OCW</button></a>
 				</div>
 			</div>
 	</div>
