--- a/self-study/Self-Study.html
+++ b/self-study/Self-Study.html
@@ -56,7 +56,7 @@
 					<div class="col-2">
 					</div>
 					<div class="col-8 main">
-						<a href="./QM I/QM 1.txt"><button class="btn primary">Quantum Physics I (MIT 8.04) - MIT OCW</button></a>
+						<a href="./QM I/QM 1.html"><button class="btn primary">Quantum Physics I (MIT 8.04) - MIT OCW</button></a>
 					</div>
 					<div class="col-2">
 					</div>
