--- a/self-study/QM I/QM I.html
+++ b/self-study/QM I/QM I.html
@@ -38,13 +38,12 @@
 		</div>
 	</nav>
 	<div class="container-fluid">
-		<h1 class="primary text-center mt-3 mb-3">About Me</h1>			
+		<h1 class="primary text-center mt-3 mb-3">Quantum Physics I (MIT 8.04) - MIT OCW</h1>			
 		<div class="row">
 			<div class="col-2">
 			</div>
 			<div class="col-8 main">
-				&nbsp;&nbsp;Hello! My name is Caleb Kelly! I'm passionate about learning all there is to know, with special interests in Mathematics, Physics, and Computer Science. 
-				I'm currently studying these majors, along with Data Science, at the University of Nebraska-Lincoln's select honors program, the Jeffrey S. Raikes School of Computer Science and Management.
+				&nbsp;&nbsp;This course is Quantum Physics I from MIT. The course information can be found on MIT Opencourseware <a href="https://ocw.mit.edu/courses/8-04-quantum-physics-i-spring-2016/">here</a>a. These are my personal notes on each lecture/section.
 			</div>
 			<div class="col-2">
 			</div>
