--- a/self-study/QM I/QM I.html
+++ b/self-study/QM I/QM I.html
@@ -43,11 +43,12 @@
 			<div class="col-2">
 			</div>
 			<div class="col-8 main">
-				&nbsp;&nbsp;This course is Quantum Physics I from MIT. The course information can be found on MIT Opencourseware <a href="https://ocw.mit.edu/courses/8-04-quantum-physics-i-spring-2016/">here</a>a. These are my personal notes on each lecture/section.
+				&nbsp;&nbsp;This course is Quantum Physics I from MIT. The course information can be found on MIT Opencourseware <a href="https://ocw.mit.edu/courses/8-04-quantum-physics-i-spring-2016/">here</a>. These are my personal notes on each lecture/section.
 			</div>
 			<div class="col-2">
 			</div>
 		</div>
+		<br>
 		<div class="row">
 					<div class="col-2">
 					</div>
