--- a/honorsSynthesis.html
+++ b/honorsSynthesis.html
@@ -42,32 +42,49 @@
 	</nav>
 
 
-<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-  <li class="nav-item" role="presentation">
-    <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Home</button>
-  </li>
-  <li class="nav-item" role="presentation">
-    <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Profile</button>
-  </li>
-  <li class="nav-item" role="presentation">
-    <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Contact</button>
-  </li>
-</ul>
-<div class="tab-content" id="pills-tabContent">
-  <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">...</div>
-  <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">...</div>
-  <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">...</div>
-</div>
 
 
 
-<div class="container-fluid" nam="content">
-		<h1 class="primary text-center mt-3 mb-3">About Me</h1>			
+
+<div class="container-fluid" name="content">
+		<h1 class="primary text-center mt-3 mb-3">Honors Synthesis Project</h1>			
 		<div class="row">
 			<div class="col-2">
 			</div>
 			<div class="col-8 main">
 				&nbsp;&nbsp;Hello! Welcome to my Honors 101H Synthesis Project page. Since the rest of the overall site is still under construction, but this part of it should be complete. 
+				<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+  					<li class="nav-item" role="presentation">
+    						<button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Home</button>
+  					</li>
+  					<li class="nav-item" role="presentation">
+    						<button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Honors Pillars</button>
+  					</li>
+  					<li class="nav-item" role="presentation">
+    						<button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">HIs</button>
+ 					</li>
+  					<li class="nav-item" role="presentation">
+    						<button class="nav-link" id="pills-leadership-tab" data-bs-toggle="pill" data bs-target = "#pills-leadership" type="button" role="tab" aria-controls="pills-leadership" aria-selected="false">Leadership</button>
+  					</li>
+  					<li class="nav-item" role="presentation">
+    						<button class="nav-link" id="pills-challenge-tab" data-bs-toggle="pill" data bs-target = "#pills-challenge" type="button" role="tab" aria-controls="pills-challenge" aria-selected="false">Challenge</button>
+  					</li>
+  					<li class="nav-item" role="presentation">
+    						<button class="nav-link" id="pills-goal-tab" data-bs-toggle="pill" data bs-target = "#pills-goal" type="button" role="tab" aria-controls="pills-goal" aria-selected="false">Goal</button>
+  					</li>
+  					<li class="nav-item" role="presentation">
+    						<button class="nav-link" id="pills-POWER-tab" data-bs-toggle="pill" data bs-target = "#pills-POWER" type="button" role="tab" aria-controls="pills-POWER" aria-selected="false">POWER</button>
+  					</li>
+				</ul>
+				<div class="tab-content" id="pills-tabContent">
+  					<div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">...</div>
+  					<div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">...</div>
+  					<div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">...</div>
+  					<div class="tab-pane fade" id="pills-leadership" role="tabpanel" aria-labelledby="pills-leadership-tab">...</div>
+  					<div class="tab-pane fade" id="pills-challenge" role="tabpanel" aria-labelledby="pills-challenge-tab">...</div>
+  					<div class="tab-pane fade" id="pills-goal" role="tabpanel" aria-labelledby="pills-goal-tab">...</div>
+  					<div class="tab-pane fade" id="pills-POWER" role="tabpanel" aria-labelledby="pills-POWER-tab">...</div>
+				</div>
 			</div>
 			<div class="col-2">
 			</div>
