--- a/honorsSynthesis.html
+++ b/honorsSynthesis.html
@@ -1,4 +1,4 @@
-<!doctype html>
+n<!doctype html>
 <html>
   <head>
     <title>Caleb Kelly</title>
@@ -47,13 +47,8 @@
 
 
 <div class="container-fluid" name="content">
-		<h1 class="primary text-center mt-3 mb-3">Honors Synthesis Project</h1>			
-		<div class="row">
-			<div class="col-2">
-			</div>
-			<div class="col-8 main">
-				&nbsp;&nbsp;Hello! Welcome to my Honors 101H Synthesis Project page. Since the rest of the overall site is still under construction, but this part of it should be complete. 
-				<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+		<h1 class="primary text-center mt-3 mb-3">Honors Synthesis Project</h1>
+	<ul class="nav nav-pills mb-3 center" id="pills-tab" role="tablist">
   					<li class="nav-item" role="presentation">
     						<button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Home</button>
   					</li>
@@ -85,6 +80,12 @@
   					<div class="tab-pane fade" id="pills-goal" role="tabpanel" aria-labelledby="pills-goal-tab">...</div>
   					<div class="tab-pane fade" id="pills-POWER" role="tabpanel" aria-labelledby="pills-POWER-tab">...</div>
 				</div>
+		<div class="row">
+			<div class="col-2">
+			</div>
+			<div class="col-8 main">
+				&nbsp;&nbsp;Hello! Welcome to my Honors 101H Synthesis Project page. Since the rest of the overall site is still under construction, but this part of it should be complete. 
+				
 			</div>
 			<div class="col-2">
 			</div>
