--- a/honorsSynthesis.html
+++ b/honorsSynthesis.html
@@ -1,4 +1,4 @@
-n<!doctype html>
+<!doctype html>
 <html>
   <head>
     <title>Caleb Kelly</title>
@@ -72,24 +72,79 @@ n<!doctype html>
   					</li>
 				</ul>
 				<div class="tab-content" id="pills-tabContent">
-  					<div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">...</div>
-  					<div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">...</div>
-  					<div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">...</div>
-  					<div class="tab-pane fade" id="pills-leadership" role="tabpanel" aria-labelledby="pills-leadership-tab">...</div>
-  					<div class="tab-pane fade" id="pills-challenge" role="tabpanel" aria-labelledby="pills-challenge-tab">...</div>
-  					<div class="tab-pane fade" id="pills-goal" role="tabpanel" aria-labelledby="pills-goal-tab">...</div>
-  					<div class="tab-pane fade" id="pills-POWER" role="tabpanel" aria-labelledby="pills-POWER-tab">...</div>
+  					<div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+							<div class="row">
+								<div class="col-2"></div>
+								<div class="col-8 main">
+									&nbsp;&nbsp;Hello! Welcome to my Honors 101H Synthesis Project page. The rest of the overall site is still under construction, but this part of it is complete. 
+								</div>
+								<div class="col-2"></div>
+							</div>
+					</div>
+  					<div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+							<div class="row">
+								<div class="col-2"></div>
+								<div class="col-8 main">
+									 <p>My perspective on each of the three pillars has changed over the semester. However, my journey in honors was especially characterized by balancing the pillars of well-being and academic/professional development; I feel the Raikes and honors programs have helped me to strike this balance and achieve personal fulfillment through my first semester in college.</p>
+	<p>Before I arrived at college, I didn’t expect health and well-being to be an important factor in my success. After all, why shouldn’t I prioritize academics? It has always worked for me in the past. Throughout the course of the semester, I’ve realized that I cannot succeed academically, professionally, or really at all unless I make a point to monitor my health - physical and emotional. I’ve learned to attain proper sleep, diet, and exercise to bolster the physical dimension of my well-being. Furthermore, I’ve built a network of friends within the Raikes and honors programs that I can trust and depend on. I’m having the time of my life at college because I am managing all aspects of my well-being instead of just prioritizing academics.</p>
+	<p>On the other hand, I didn’t expect academic and professional development to be an issue for me; I was correct. However, I have determined the way I have always approached these facets of my life has been incorrect. I have always felt the need to succeed on my own, without help - I have always wanted to succeed independently. This semester in honors, I’ve learned I can depend on others to help me achieve my goals. Asking my friends, TAs, and advisors to help with resume writing, cover letters, and internship applications made me a more successful person academically and professionally. I attended the Raikes career fair early on in the semester, which was pivotal to getting my internship for this summer.</p>
+
+								</div>
+								<div class="col-2"></div>
+							</div>
+					</div>
+  					<div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
+							<div class="row">
+								<div class="col-2"></div>
+								<div class="col-8 main">
+									 <p>Throughout my life, it will be important to set goals for myself so I know where I am, where I’ve been, and where I’m headed. Choosing SMART goals and attending honors impact activities has helped me to further myself in the direction of success and personal fulfillment.</p>
+	<p>My first SMART goal was in the category of health and well-being. I wanted to get at least seven hours of sleep each night, which I did not believe was especially ambitious by any means. However, there was a point in the semester when I could not get a full night’s sleep due to the stress I was under. This was a wake-up call (pun not intended) for me because one aspect of my health - mental - was beginning to impact the other - physical - aspect negatively. The honors impact activity for the section was a stress management workshop, which forced me to take a break from the very activities which were stressing me. This workshop helped me recover and get myself back on track for the remainder of the semester. Moving forward, I know I will need to pay more attention to stress management so it doesn’t begin to impact the rest of my life.</p>
+	<p>My second SMART goal was to land an internship for this summer, which was in the category for academic and career development. Although internships aren’t common for freshmen, they are almost an expectation in the Raikes program. It’s very important to gain work experience in a world that prioritizes it. Although I do have a career development class in Raikes and I already had my resume built, the honors impact for this section (the resume workshop) provided a novel perspective on resume building. One thing I did learn was that the name of the file I upload could matter to a resume reviewer, which is why I will pay careful attention to it in the future.</p>
+	<p>Finally, my SMART goal for community and global development was to work on the Honors Student Advisory Board. Community and global development is an important pillar of the honors program, not only because it contributes to professional networking, but more importantly because it helps make you a more well-rounded person in general. I accomplished my goal, and I am now on the HSAB; although I was unable to attend the first two meetings of the semester, I’ve already seen how much fun the program is to be a part of. For this honors impact activity, we investigated the many study abroad programs the university offers. Although this activity didn’t directly contribute to my SMART goal and I probably won’t study abroad in my undergraduate career, I feel better knowing that studying abroad is still an option that’s available to me for improving myself.</p>
+								</div>
+								<div class="col-2"></div>
+							</div>
+					</div>
+  					<div class="tab-pane fade" id="pills-leadership" role="tabpanel" aria-labelledby="pills-leadership-tab">
+							<div class="row">
+								<div class="col-2"></div>
+								<div class="col-8 main">
+									<p>As I have learned in this class, being a leader isn’t just about holding positional authority, it’s about positively impacting the people around you. Leading by example is just as important as positional leadership. Leading by example can be implemented through the health and well-being pillar because managing your own health and well-being is a good way to set an example for others to do the same and to normalize healthy habits. Of course, a position is an obvious form of leadership, which is why I sought out leadership positions such as a place on the ASUN Campus Life & Safety committee. The pillar of academic and professional development will be especially helpful with this part of becoming a campus leader. Getting out into the community is another important part of developing leadership, because you can’t really make an impact on people’s lives without coming into contact with others in some way. By making connections within the honors community, I’ve been able to help my peers understand their homework, which moves especially quickly in the Raikes curriculum. I feel I’ve made a significant positive impact on my community within the Raikes program in this way.</p>
+
+								</div>
+								<div class="col-2"></div>
+							</div>
+					</div>
+  					<div class="tab-pane fade" id="pills-challenge" role="tabpanel" aria-labelledby="pills-challenge-tab">
+							<div class="row">
+								<div class="col-2"></div>
+								<div class="col-8 main">
+									<p>One challenge I experienced during my first semester was finding my identity. At my high school, my identity was always “the smart one,” which I felt was almost dehumanizing in a way. Now, I can fully come into my own identity and embrace a true personality for myself. Through my personal relationships within the Raikes and honors program communities, I have slowly developed my sense of self. I finally have a sense of who I am, and now that I know, I can focus on being happy in my role in life. I feel if I hadn’t been in the honors or Raikes programs, I would have been unable to develop as close relationships as I have so far. My life goals are entirely dependent on my beliefs about myself, so finding out who I am sooner rather than later will help me shape the course of my academic and professional career, and ultimately my life.</p>
+								</div>
+								<div class="col-2"></div>
+							</div>
+					</div>
+  					<div class="tab-pane fade" id="pills-goal" role="tabpanel" aria-labelledby="pills-goal-tab">
+							<div class="row">
+								<div class="col-2"></div>
+								<div class="col-8 main">
+									<p>One goal I have for myself going forward is to gain admission to a top graduate school for computer science. Eventually, I would like to become a researcher in industry for computer science. In order to achieve this goal, I have gathered information about admissions requirements from multiple universities, spoken with professors about research, and talked to my advisor about getting graduate credit as an undergraduate student. My SMART goals from this semester have directly contributed to this large career goal. For example, developing a proper sleep schedule will help me maintain my academic performance needed to get to grad school. Landing an internship will get me valuable programming experience, which I will need to get into graduate school for computer science. Finally, a position on the HSAB will show that I have leadership experience; I can also put it on my resume for my application.</p>
+
+								</div>
+								<div class="col-2"></div>
+							</div>
+					</div>
+  					<div class="tab-pane fade" id="pills-POWER" role="tabpanel" aria-labelledby="pills-POWER-tab">
+							<div class="row">
+								<div class="col-2"></div>
+								<div class="col-8 main">
+									<p>Although every dimension of Husker POWER is important, I have especially focused on purpose and relationships throughout my first semester. Before I can determine my long term goals, I have to find my purpose in life. I feel discovering my sense of self has helped me clarify my purpose, but I will have to work towards further clarification in the remainder of my college years. This also goes hand in hand with relationships, because building those relationships is how I have developed my sense of self. Overall, I’ve built a very close network of friends during my first semester in Raikes, and I will continue to strengthen my relationships with others, discover myself, and determine my purpose in life for the duration of my academic career.</p>
+								</div>
+								<div class="col-2"></div>
+							</div>
+					</div>
 				</div>
-		<div class="row">
-			<div class="col-2">
-			</div>
-			<div class="col-8 main">
-				&nbsp;&nbsp;Hello! Welcome to my Honors 101H Synthesis Project page. Since the rest of the overall site is still under construction, but this part of it should be complete. 
-				
-			</div>
-			<div class="col-2">
-			</div>
-		</div>
+		
 	</div>
   
   </body>
