--- a/honorsSynthesis.html
+++ b/honorsSynthesis.html
@@ -48,7 +48,7 @@
 
 <div class="container-fluid" name="content">
 		<h1 class="primary text-center mt-3 mb-3">Honors Synthesis Project</h1>
-	<ul class="nav nav-pills mb-3 center" id="pills-tab" role="tablist">
+				<ul class="nav nav-pills mb-3 center" id="pills-tab" role="tablist">
   					<li class="nav-item" role="presentation">
     						<button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Home</button>
   					</li>
@@ -59,16 +59,16 @@
     						<button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">HIs</button>
  					</li>
   					<li class="nav-item" role="presentation">
-    						<button class="nav-link" id="pills-leadership-tab" data-bs-toggle="pill" data bs-target = "#pills-leadership" type="button" role="tab" aria-controls="pills-leadership" aria-selected="false">Leadership</button>
+    						<button class="nav-link" id="pills-leadership-tab" data-bs-toggle="pill" data-bs-target = "#pills-leadership" type="button" role="tab" aria-controls="pills-leadership" aria-selected="false">Leadership</button>
   					</li>
   					<li class="nav-item" role="presentation">
-    						<button class="nav-link" id="pills-challenge-tab" data-bs-toggle="pill" data bs-target = "#pills-challenge" type="button" role="tab" aria-controls="pills-challenge" aria-selected="false">Challenge</button>
+    						<button class="nav-link" id="pills-challenge-tab" data-bs-toggle="pill" data-bs-target = "#pills-challenge" type="button" role="tab" aria-controls="pills-challenge" aria-selected="false">Challenge</button>
   					</li>
   					<li class="nav-item" role="presentation">
-    						<button class="nav-link" id="pills-goal-tab" data-bs-toggle="pill" data bs-target = "#pills-goal" type="button" role="tab" aria-controls="pills-goal" aria-selected="false">Goal</button>
+    						<button class="nav-link" id="pills-goal-tab" data-bs-toggle="pill" data-bs-target = "#pills-goal" type="button" role="tab" aria-controls="pills-goal" aria-selected="false">Goal</button>
   					</li>
   					<li class="nav-item" role="presentation">
-    						<button class="nav-link" id="pills-POWER-tab" data-bs-toggle="pill" data bs-target = "#pills-POWER" type="button" role="tab" aria-controls="pills-POWER" aria-selected="false">POWER</button>
+    						<button class="nav-link" id="pills-POWER-tab" data-bs-toggle="pill" data-bs-target = "#pills-POWER" type="button" role="tab" aria-controls="pills-POWER" aria-selected="false">POWER</button>
   					</li>
 				</ul>
 				<div class="tab-content" id="pills-tabContent">
@@ -115,7 +115,7 @@
 								<div class="col-2"></div>
 							</div>
 					</div>
-  					<div class="tab-pane fade" id="pills-challenge" role="tabpanel" aria-labelledby="pills-challenge-tab">
+  					<div class="tab-pane fade" id="pills-challenge" role="tabpanel">
 							<div class="row">
 								<div class="col-2"></div>
 								<div class="col-8 main">
@@ -124,7 +124,7 @@
 								<div class="col-2"></div>
 							</div>
 					</div>
-  					<div class="tab-pane fade" id="pills-goal" role="tabpanel" aria-labelledby="pills-goal-tab">
+  					<div class="tab-pane fade" id="pills-goal" role="tabpanel">
 							<div class="row">
 								<div class="col-2"></div>
 								<div class="col-8 main">
@@ -134,7 +134,7 @@
 								<div class="col-2"></div>
 							</div>
 					</div>
-  					<div class="tab-pane fade" id="pills-POWER" role="tabpanel" aria-labelledby="pills-POWER-tab">
+  					<div class="tab-pane fade" id="pills-POWER" role="tabpanel">
 							<div class="row">
 								<div class="col-2"></div>
 								<div class="col-8 main">
