--- a/honorsSynthesis.html
+++ b/honorsSynthesis.html
@@ -48,7 +48,7 @@
 
 <div class="container-fluid" name="content">
 		<h1 class="primary text-center mt-3 mb-3 center">Honors Synthesis Project</h1>
-				<ul class="nav nav-pills mb-3 center" id="pills-tab" role="tablist">
+				<ul class="nav nav-pills mb-3 center nav-justified" id="pills-tab" role="tablist">
   					<li class="nav-item" role="presentation">
     						<button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Home</button>
   					</li>
