--- a/honorsSynthesis.html
+++ b/honorsSynthesis.html
@@ -76,7 +76,7 @@
 							<div class="row">
 								<div class="col-2"></div>
 								<div class="col-8 main">
-									<img src="./Synthesis 1.jpg">
+									<img src="./Synthesis 1.jpg" style="max-width:200px">
 									&nbsp;&nbsp;Hello! Welcome to my Honors 101H Synthesis Project page. The rest of the overall site is still under construction, but this part of it is complete. 
 								</div>
 								<div class="col-2"></div>
