--- a/self-study/Self-Study.html
+++ b/self-study/Self-Study.html
@@ -57,6 +57,7 @@
 					</div>
 					<div class="col-8 main">
 						<a href="./QM I/QM I.html"><button class="btn primary">Quantum Physics I (MIT 8.04) - MIT OCW</button></a>
+						<a href="./QM II/QM II.html"><button class="btn primary">Quantum Physics II (MIT 8.05) - MIT OCW</button></a>
 					</div>
 					<div class="col-2">
 					</div>
