--- a/self-study/QM II/QM II.html
+++ b/self-study/QM II/QM II.html
@@ -38,12 +38,12 @@
 		</div>
 	</nav>
 	<div class="container-fluid">
-		<h1 class="primary text-center mt-3 mb-3">Quantum Physics I (MIT 8.04) - MIT OCW</h1>			
+		<h1 class="primary text-center mt-3 mb-3">Quantum Physics II (MIT 8.05) - MIT OCW</h1>			
 		<div class="row">
 			<div class="col-2">
 			</div>
 			<div class="col-8 main">
-				&nbsp;&nbsp;This course is Quantum Physics I from MIT. The course information can be found on MIT Opencourseware <a href="https://ocw.mit.edu/courses/8-04-quantum-physics-i-spring-2016/">here</a>. These are my personal notes on each lecture/section.
+				&nbsp;&nbsp;This course is Quantum Physics II from MIT. The course information can be found on MIT Opencourseware <a href="https://ocw.mit.edu/courses/8-05-quantum-physics-ii-fall-2013">here</a>. These are my personal notes on each lecture/section.
 			</div>
 			<div class="col-2">
 			</div>
