--- a/self-study/Self-Study.html
+++ b/self-study/Self-Study.html
@@ -56,29 +56,14 @@
 					<div class="col-2">
 					</div>
 					<div class="col-8 main">
-						<a href="./QM I/QM I.html"><button class="btn primary">Quantum Physics I (MIT 8.04) - MIT OCW</button></a>
-						<a href="./QM II/QM II.html"><button class="btn primary">Quantum Physics II (MIT 8.05) - MIT OCW</button></a>
+						<a href="./Physics/Physics.html"><button class="btn primary">Physics</button></a>
+						<a href="./Mathematics/Mathematics.html"><button class="btn primary">Mathematics</button></a>
 					</div>
 					<div class="col-2">
 					</div>
 				</div>
 		</div>
 	</div>
-	  <div class="mermaid">
-    		graph TD
-     		  CS[Computer Science] --> Algorithms
-      		  CS --> DataStructures
-      		  Algorithms --> LeetCode
-      		  Math --> Calculus
-      		  Math --> LinearAlgebra
-      		  LinearAlgebra --> MachineLearning
-      		  Physics --> Quantum
-      		  MachineLearning --> DeepLearning
- 	</div>
 </div>
-<script type="module">
-    import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
-    mermaid.initialize({ startOnLoad: true });
-</script>
 </body>
 </html>
