--- a/self-study/Physics/Physics.html
+++ b/self-study/Physics/Physics.html
@@ -42,3 +42,12 @@
 				<div class="row">
 					<div class="col-2">
 					</div>
+					<div class="col-10"></div>
+					<div class="col-2">
+					</div>
+				</div>
+		</div>
+	</div>
+</div>
+</body>
+</html>
