--- a/self-study/Physics/Physics.html
+++ b/self-study/Physics/Physics.html
@@ -42,7 +42,9 @@
 				<div class="row">
 					<div class="col-2">
 					</div>
-					<div class="col-10"></div>
+					<div class="col-8 main">
+						
+					</div>
 					<div class="col-2">
 					</div>
 				</div>
