--- a/self-study/Mathematics/Mathematics.html
+++ b/self-study/Mathematics/Mathematics.html
@@ -1,1 +1,55 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>Caleb Kelly</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+	<link href="https://caleb-m-kelly.github.io/style.css" rel="stylesheet">
+</head>
+<body class="container-fluid p-0">
+<div class="container-fluid rounded">
+	<div class="mt-4 p-3 primary text-center">
+		<h1 class="topHead">Caleb Kelly</h1>
+	</div>
+	<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center">
+			<div class="container-fluid justify-content-center">
+				<ul class=navbar-nav>
+					<li class="nav-item">
+						<a class="nav-link" href="https://Caleb-M-Kelly.github.io/index.html">Home</a>
+					</li>
+				</ul>
+				<ul class=navbar-nav>
+					<li class="nav-item">
+						<a class="nav-link" href="https://Caleb-M-Kelly.github.io/About.html">About</a>
+					</li>
+				</ul>
+				<ul class=navbar-nav>
+					<li class="nav-item">
+						<a class="nav-link active" href="https://Caleb-M-Kelly.github.io/self-study/Self-Study.html"> Self-Study </a>
+					</li>
+				</ul>
+				<ul class=navbar-nav>
+					<li class="nav-item">
+						<a class="nav-link" href="https://Caleb-M-Kelly.github.io/projects/Projects.html">Projects</a>
+					</li>
+				</ul>
+			</div>
+	</nav>
+	<div class="container-fluid">
+		<div class="container-fluid">
+				<div class="row">
+					<div class="col-2">
+					</div>
+					<div class="col-8 main">
+						
+					</div>
+					<div class="col-2">
+					</div>
+				</div>
+		</div>
+	</div>
+</div>
+</body>
+</html>
