--- a/self-study/Physics/Physics.html
+++ b/self-study/Physics/Physics.html
@@ -74,5 +74,9 @@ graph BT
 		</div>
 	</div>
 </div>
+
+<script type="module">
+  import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.esm.min.mjs';
+</script>
 </body>
 </html>
