--- a/self-study/Mathematics/Mathematics.html
+++ b/self-study/Mathematics/Mathematics.html
@@ -42,7 +42,7 @@
 				<div class="row">
 					<div class="col-2">
 					</div>
-					<div class="col-8 main">
+					<div class="col-8 main"><center>
 						<div class="mermaid">
 graph BT
   mathematics(Mathematics)
@@ -85,7 +85,7 @@ graph BT
   
   
 </div>
-					</div>
+					</center></div>
 					<div class="col-2">
 					</div>
 				</div>
