--- a/self-study/Physics/Physics.html
+++ b/self-study/Physics/Physics.html
@@ -42,7 +42,7 @@
 				<div class="row">
 					<div class="col-2">
 					</div>
-					<div class="col-8 main">
+					<div class="col-8 main"><center>
 						<div class="mermaid">
 graph BT
   physics(Physics)
@@ -67,7 +67,7 @@ graph BT
   physicsII --> emII
   relativity --> generalRelativity
 </div>
-					</div>
+					</center></div>
 					<div class="col-2">
 					</div>
 				</div>
