--- a/self-study/Physics/Physics.html
+++ b/self-study/Physics/Physics.html
@@ -66,6 +66,9 @@ graph BT
   physicsII --> relativity
   physicsII --> emII
   relativity --> generalRelativity
+							
+  click qmI "./QM I/QM I.html"
+  click qmII "./QM II/QM II.html"
 </div>
 					</center></div>
 					<div class="col-2">
